# kswitch-arch

./: .gitignore  CMakeLists.txt  PKGBUILD  PKGBUILD.ktodo  README.ktodo.md  README.md  build.sh  org.kde.ktodo.desktop
qml/: DatePicker.qml  TaskDelegate.qml  TaskEditor.qml  TaskListView.qml  main.qml
src/: main.cpp  resources.qrc  taskmanager.cpp  taskmanager.h  taskmodel.cpp  taskmodel.h
